--- a/index.html
+++ b/index.html
@@ -48,6 +48,48 @@
             nos alegra que seas nuestro vecino.
           </p>
         </section>
+        <section class="gallery">
+          <img
+            src="./images/gallery__item-1.png"
+            alt="imagen de ciudad 1"
+            class="gallery__item"
+          />
+          <img
+            src="./images/gallery__item-2.png"
+            alt="imagen de ciudad 2"
+            class="gallery__item"
+          />
+          <img
+            src="./images/gallery__item-3.png"
+            alt="imagen de ciudad 3"
+            class="gallery__item"
+          />
+          <img
+            src="./images/gallery__item-4.png"
+            alt="imagen de ciudad 4"
+            class="gallery__item"
+          />
+          <img
+            src="./images/gallery__item-5.png"
+            alt="imagen de ciudad 5"
+            class="gallery__item"
+          />
+          <img
+            src="./images/gallery__item-6.png"
+            alt="imagen de ciudad 6"
+            class="gallery__item"
+          />
+          <img
+            src="./images/gallery__item-7.png"
+            alt="imagen de ciudad 7"
+            class="gallery__item"
+          />
+          <img
+            src="./images/gallery__item-8.png"
+            alt="imagen de ciudad 8"
+            class="gallery__item"
+          />
+        </section>
       </main>
       <footer class="footer">
         <p class="footer__copyright">&#169; 2024. Wilman R</p>
