remove temp image added buttom

--- a/index.html
+++ b/index.html
@@ -95,41 +95,48 @@
             <h3 class="place__title">Cricieth, Gales</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artistas</h4>
-              <p class="place__artist_paragraph">Steffan Warren, editor jefe</p>
-              <p class="place__artist_paragraph">
+              <p class="place__artist-paragraph">Steffan Warren, editor jefe</p>
+              <p class="place__artist-paragraph">
                 Kseniya Glagoleva, gerente de proyectos
               </p>
             </div>
-            <img
-              src="./images/place__image-1.png"
-              alt="imagen Gales"
-              class="place__image"
-            />
-            <p class="place__paragraph-top">
-              Las ruinas medievales del castillo de Cricieth dominan la ciudad
-              desde una roca que extiende sobre el mar. Se cree que fue
-              construido por Llewelyn el Grande en el S. XIII. 800 años después,
-              la autodenominada *Perla de Gales en las costas de Snowdonia*, se
-              ha convertido en un popular destino turístico durante los meses de
-              verano.
-            </p>
-            <p class="place__paragraph-mid">
-              A pocos pasos de camino al castillo, puedes disfrutar de los
-              mejores helados del mundo en Cadwalader's, cuyo ingrediente
-              secreto se rumorea que son algas marinas de la localidad. Otra
-              cosa por la que es famosa Cricieth es por haber ganado el premio
-              *Gales en flor* durante cinco años seguidos por sus espectaculares
-              muestras florales alrededor de la ciudad. También vio nacer a
-              David Lloyd George, el único galés que ha sido Primer Ministro del
-              Reino Unido.
-            </p>
+            <a
+              class="place__link-image"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              <img
+                src="./images/place__image-1.png"
+                alt="imagen Gales"
+                class="place__image"
+              />
+            </a>
+            <div class="place__paragraphs">
+              <p class="place__paragraph">
+                Las ruinas medievales del castillo de Cricieth dominan la ciudad
+                desde una roca que extiende sobre el mar. Se cree que fue
+                construido por Llewelyn el Grande en el S. XIII. 800 años
+                después, la autodenominada *Perla de Gales en las costas de
+                Snowdonia*, se ha convertido en un popular destino turístico
+                durante los meses de verano.
+              </p>
+              <p class="place__paragraph">
+                A pocos pasos de camino al castillo, puedes disfrutar de los
+                mejores helados del mundo en Cadwalader's, cuyo ingrediente
+                secreto se rumorea que son algas marinas de la localidad. Otra
+                cosa por la que es famosa Cricieth es por haber ganado el premio
+                *Gales en flor* durante cinco años seguidos por sus
+                espectaculares muestras florales alrededor de la ciudad. También
+                vio nacer a David Lloyd George, el único galés que ha sido
+                Primer Ministro del Reino Unido.
+              </p>
+            </div>
             <a
               class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
-              <div class="place__link-icon">
+              <button class="place__link-button" type="button">
                 <p class="place__link-paragraph">Compra esta obra como NFT</p>
-              </div>
+              </button>
             </a>
           </div>
 
@@ -137,123 +144,154 @@
             <h3 class="place__title">Berea, EE.UU.</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artista</h4>
-              <p class="place__artist_paragraph">
+              <p class="place__artist-paragraph">
                 Travis Turner, autor y editor
               </p>
             </div>
-            <img
-              src="./images/place__image-2.png"
-              alt="imagen UU"
-              class="place__image"
-            />
-            <p class="place__paragraph-top">
-              Berea es una pequeña ciudad ubicada en la parte central de
-              Kentucky. La ciudad está rodeada por hermosos bosques y campos. Es
-              conocida como la capital de la artesanía del estado, y sus
-              visitantes hallarán infinitas posibilidades para ir de compras:
-              tiendas de joyas, velas y artículos de madera artesanales;
-              galerías, talleres de vidrio y más. La ciudad celebra un festival
-              anual que rinde tributo al "spoonbread", un platillo local hecho
-              de pan de maíz y que se sirve con una cuchara de madera.
-            </p>
-            <p class="place__paragraph-mid">
-              Aunque, probablemente es mejor conocida por su universidad. El
-              Berea College fue fundado en 1855 y fue la primera universidad
-              sureña integrada racialmente, así como la primera en ser
-              coeducacional. Algo que en cierta manera la hace única, es que no
-              cobra colegiatura: cada estudiante recibe una beca del 100%.
-            </p>
+            <a
+              class="place__link-image"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              <img
+                src="./images/place__image-2.png"
+                alt="imagen UU"
+                class="place__image"
+              />
+            </a>
+            <div class="place__paragraphs">
+              <p class="place__paragraph">
+                Berea es una pequeña ciudad ubicada en la parte central de
+                Kentucky. La ciudad está rodeada por hermosos bosques y campos.
+                Es conocida como la capital de la artesanía del estado, y sus
+                visitantes hallarán infinitas posibilidades para ir de compras:
+                tiendas de joyas, velas y artículos de madera artesanales;
+                galerías, talleres de vidrio y más. La ciudad celebra un
+                festival anual que rinde tributo al "spoonbread", un platillo
+                local hecho de pan de maíz y que se sirve con una cuchara de
+                madera.
+              </p>
+              <p class="place__paragraph">
+                Aunque, probablemente es mejor conocida por su universidad. El
+                Berea College fue fundado en 1855 y fue la primera universidad
+                sureña integrada racialmente, así como la primera en ser
+                coeducacional. Algo que en cierta manera la hace única, es que
+                no cobra colegiatura: cada estudiante recibe una beca del 100%.
+              </p>
+            </div>
             <a
               class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
-              <div class="place__link-icon">
+              <button class="place__link-button" type="button">
                 <p class="place__link-paragraph">Compra esta obra como NFT</p>
-              </div>
+              </button>
             </a>
           </div>
 
           <div class="place">
-            <h3 class="place__title">Muramvya,<br />Burundi</h3>
+            <h3 class="place__title">Muramvya, <br />Burundi</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artista</h4>
-              <p class="place__artist_paragraph">
+              <p class="place__artist-paragraph">
                 Grevisse Kenguruka, editor técnico
               </p>
             </div>
-            <img
-              src="./images/place__image-3.png"
-              alt="imagen Burundi"
-              class="place__image"
-            />
-            <p class="place__paragraph-top">
-              Muramvya es una de las 18 provincias de Burundi. Durante la época
-              del reino, Muramvya fue su capital; y en 2017, gracias a su
-              paisaje cultural y natural, se añadió a la Lista provisional de
-              patrimonio mundial de la UNESCO. Se encuentra ubicada en el centro
-              de Burundi, entre las capitales política y económica del país.
-            </p>
-            <p class="place__paragraph-mid">
-              Muramvya es una de las 18 provincias de Burundi. Durante la época
-              del reino, Muramvya fue su capital; y en 2017, gracias a su
-              paisaje cultural y natural, se añadió a la Lista provisional de
-              patrimonio mundial de la UNESCO. Se encuentra ubicada en el centro
-              de Burundi, entre las capitales política y económica del país.
-            </p>
-            <p class="place__paragraph-bottom">
-              El Parque nacional de Kibira, una de las mayores reservas de vida
-              silvestre para los simios, ocupa parte de cuatro provincias,
-              incluyendo Muramvya. Este parque nacional se encuentra en las
-              cúspides de las hermosas montañas de la Divisoria Congo-Nilo,
-              cuyas alturas oscilan entre 1,550 y 2,660 metros. Está lleno de
-              hermosa vegetación, y es una fuente para los diversos ríos y
-              arroyos que proporcionan agua alrededor del país.
-            </p>
+            <a
+              class="place__link-image"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              <img
+                src="./images/place__image-3.png"
+                alt="imagen Burundi"
+                class="place__image"
+              />
+            </a>
+            <div class="place__paragraphs">
+              <p class="place__paragraph">
+                Muramvya es una de las 18 provincias de Burundi. Durante la
+                época del reino, Muramvya fue su capital; y en 2017, gracias a
+                su paisaje cultural y natural, se añadió a la Lista provisional
+                de patrimonio mundial de la UNESCO. Se encuentra ubicada en el
+                centro de Burundi, entre las capitales política y económica del
+                país.
+              </p>
+              <p class="place__paragraph">
+                Muramvya es una de las 18 provincias de Burundi. Durante la
+                época del reino, Muramvya fue su capital; y en 2017, gracias a
+                su paisaje cultural y natural, se añadió a la Lista provisional
+                de patrimonio mundial de la UNESCO. Se encuentra ubicada en el
+                centro de Burundi, entre las capitales política y económica del
+                país.
+              </p>
+              <p class="place__paragraph">
+                El Parque nacional de Kibira, una de las mayores reservas de
+                vida silvestre para los simios, ocupa parte de cuatro
+                provincias, incluyendo Muramvya. Este parque nacional se
+                encuentra en las cúspides de las hermosas montañas de la
+                Divisoria Congo-Nilo, cuyas alturas oscilan entre 1,550 y 2,660
+                metros. Está lleno de hermosa vegetación, y es una fuente para
+                los diversos ríos y arroyos que proporcionan agua alrededor del
+                país.
+              </p>
+            </div>
             <a
               class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
-              <div class="place__link-icon">
+              <button class="place__link-button" type="button">
                 <p class="place__link-paragraph">Compra esta obra como NFT</p>
-              </div>
+              </button>
             </a>
           </div>
 
           <div class="place">
-            <h3 class="place__title">CDMX, México.</h3>
+            <h3 class="place__title">Cali, Colombia.</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artista</h4>
-              <p class="place__artist_paragraph">
-                Luis González , diseñador web.
+              <p class="place__artist-paragraph">
+                Wilman Rivera , Diseñador Multimedia.
               </p>
             </div>
-            <img
-              src="./images/place__image-4.jpg"
-              alt="imagen CDMX"
-              class="place__image"
-            />
-            <p class="place__paragraph-top">
-              Ciudad de México es la densamente poblada capital de México que se
-              encuentra a gran altura. Es famosa por su Templo Mayor (un templo
-              azteca del siglo XIII), la Catedral Metropolitana de México, de
-              estilo barroco, de los conquistadores españoles y el Palacio
-              Nacional, que alberga murales históricos de Diego Rivera. Todos
-              estos hitos se ubican en torno a la Plaza de la Constitución, la
-              enorme plaza principal conocida también como el Zócalo.
-            </p>
-            <p class="place__paragraph-mid">
-              Ha sido el escenario de varios de los acontecimientos históricos y
-              mediáticos más importantes de dicha nación. No hay consenso
-              científico sobre la fecha de la fundación de la ciudad, pero pudo
-              ocurrir a inicios del siglo xiv.
-            </p>
+            <a
+              class="place__link-image"
+              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            >
+              <img
+                src="./images/place__image-4.jpg"
+                alt="imagen Cali"
+                class="place__image"
+              />
+            </a>
+            <div class="place__paragraphs">
+              <p class="place__paragraph">
+                Cali, conocida como la "Sucursal del Cielo", es una vibrante
+                ciudad ubicada en el suroeste de Colombia. Es la capital del
+                departamento del Valle del Cauca y uno de los principales
+                centros urbanos del país. Cali se destaca por su rica cultura,
+                influenciada por una mezcla de tradiciones africanas, indígenas
+                y españolas. La ciudad es famosa por ser la cuna de la salsa, un
+                género musical y de baile que resuena en cada esquina, con
+                numerosas escuelas y eventos dedicados a esta expresión
+                artística. Además, Cali es una ciudad rodeada de exuberantes
+                montañas y valles, lo que le otorga un clima cálido y agradable
+                durante todo el año, ideal para disfrutar de sus parques,
+                miradores y ríos cercanos.
+              </p>
+              <p class="place__paragraph">
+                A pesar de ser una metrópoli moderna, Cali conserva un encanto
+                particular con sus barrios tradicionales, su centro histórico, y
+                su gente hospitalaria. Su vida nocturna es intensa, con una gran
+                variedad de bares, discotecas y restaurantes que atraen tanto a
+                locales como a turistas.
+              </p>
+            </div>
             <a
               class="place__link"
               href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
             >
-              <div class="place__link-icon">
+              <button class="place__link-button" type="button">
                 <p class="place__link-paragraph">Compra esta obra como NFT</p>
-              </div>
+              </button>
             </a>
           </div>
         </section>
