change buttom label

--- a/index.html
+++ b/index.html
@@ -130,14 +130,13 @@
                 Primer Ministro del Reino Unido.
               </p>
             </div>
-            <a
-              class="place__link"
-              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            <button
+              onclick="location.href = 'https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq';"
+              class="place__link-button"
+              type="button"
             >
-              <button class="place__link-button" type="button">
-                <p class="place__link-paragraph">Compra esta obra como NFT</p>
-              </button>
-            </a>
+              Compra esta obra como NFT
+            </button>
           </div>
 
           <div class="place">
@@ -178,14 +177,13 @@
                 no cobra colegiatura: cada estudiante recibe una beca del 100%.
               </p>
             </div>
-            <a
-              class="place__link"
-              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            <button
+              onclick="location.href = 'https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq';"
+              class="place__link-button"
+              type="button"
             >
-              <button class="place__link-button" type="button">
-                <p class="place__link-paragraph">Compra esta obra como NFT</p>
-              </button>
-            </a>
+              Compra esta obra como NFT
+            </button>
           </div>
 
           <div class="place">
@@ -234,14 +232,13 @@
                 país.
               </p>
             </div>
-            <a
-              class="place__link"
-              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            <button
+              onclick="location.href = 'https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq';"
+              class="place__link-button"
+              type="button"
             >
-              <button class="place__link-button" type="button">
-                <p class="place__link-paragraph">Compra esta obra como NFT</p>
-              </button>
-            </a>
+              Compra esta obra como NFT
+            </button>
           </div>
 
           <div class="place">
