fix image widht

--- a/index.html
+++ b/index.html
@@ -282,14 +282,13 @@
                 locales como a turistas.
               </p>
             </div>
-            <a
-              class="place__link"
-              href="https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq"
+            <button
+              onclick="location.href = 'https://www.theverge.com/22310188/nft-explainer-what-is-blockchain-crypto-art-faq';"
+              class="place__link-button"
+              type="button"
             >
-              <button class="place__link-button" type="button">
-                <p class="place__link-paragraph">Compra esta obra como NFT</p>
-              </button>
-            </a>
+              Compra esta obra como NFT
+            </button>
           </div>
         </section>
       </main>
