--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
           </div>
 
           <div class="place">
-            <h3 class="place__title">Muramvya, <br />Burundi</h3>
+            <h3 class="place__title">Muramvya, Burundi</h3>
             <div class="place__artists">
               <h4 class="place__subtitle">Artista</h4>
               <p class="place__artist-paragraph">
