--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="author" content="Luis Gonzalez" />
+    <meta name="author" content="Wilman Rivera" />
     <meta name="description" content="Homeland-Tierra natal" />
     <meta name="keywords" content="HTML, CSS" />
     <title>Homeland-Tierra natal</title>
